--- a/MacDown/Localization/is.lproj/MPGeneralPreferencesViewController.strings
+++ b/MacDown/Localization/is.lproj/MPGeneralPreferencesViewController.strings
@@ -1,27 +1,18 @@
-
-/* Class = "NSButtonCell"; title = "Sync preview scrollbar when editor scrolls"; ObjectID = "2Uj-Sx-FjV"; */
-"2Uj-Sx-FjV.title" = "Sync preview scrollbar when editor scrolls";
-
 /* Class = "NSBox"; title = "Behavior"; ObjectID = "Nma-PL-ZvX"; */
-"Nma-PL-ZvX.title" = "Behavior";
+"Nma-PL-ZvX.title" = "Hegðun";
 
 /* Class = "NSButtonCell"; title = "Put editor on the right"; ObjectID = "bUn-PQ-5Ez"; */
-"bUn-PQ-5Ez.title" = "Put editor on the right";
+"bUn-PQ-5Ez.title" = "Hafa ritilinn hægra megin";
 
 /* Class = "NSBox"; title = "Update"; ObjectID = "eLn-fW-Agu"; */
-"eLn-fW-Agu.title" = "Update";
-
-/* Class = "NSButtonCell"; title = "Automatically create files for link targets"; ObjectID = "hpF-zP-3cM"; */
-"hpF-zP-3cM.title" = "Automatically create files for link targets";
+"eLn-fW-Agu.title" = "Uppfærsla";
 
 /* Class = "NSButtonCell"; title = "Ensure open document on launch"; ObjectID = "l9N-wk-WRY"; */
-"l9N-wk-WRY.title" = "Ensure open document on launch";
+"l9N-wk-WRY.title" = "Tryggja að skrá sé opin við ræsingu";
 
 /* Class = "NSButtonCell"; title = "Update preview automatically as you type"; ObjectID = "npz-xj-plX"; */
-"npz-xj-plX.title" = "Update preview automatically as you type";
+"npz-xj-plX.title" = "Uppfæra forskoðunina sjálfvirkt á meðan þú skrifar";
 
 /* Class = "NSButtonCell"; title = "Show word count"; ObjectID = "oeW-bF-ybW"; */
-"oeW-bF-ybW.title" = "Show word count";
+"oeW-bF-ybW.title" = "Sýna orðafjölda";
 
-/* Class = "NSButtonCell"; title = "Include pre-releases"; ObjectID = "vbz-fv-8BX"; */
-"vbz-fv-8BX.title" = "Include pre-releases";
