--- a/MacDown/Localization/pt-BR.lproj/MPExportPanelAccessoryViewController.strings
+++ b/MacDown/Localization/pt-BR.lproj/MPExportPanelAccessoryViewController.strings
@@ -1,6 +1,6 @@
-
 /* Class = "NSButtonCell"; title = "Include syntax highlighting"; ObjectID = "1f7-JB-VR1"; */
-"1f7-JB-VR1.title" = "Include syntax highlighting";
+"1f7-JB-VR1.title" = "Incluir realce de sintaxe";
 
 /* Class = "NSButtonCell"; title = "Include styles"; ObjectID = "fod-Ff-UTI"; */
-"fod-Ff-UTI.title" = "Include styles";
+"fod-Ff-UTI.title" = "Incluir estilos";
+
