--- a/MacDown/Localization/nl-NL.lproj/MPGeneralPreferencesViewController.strings
+++ b/MacDown/Localization/nl-NL.lproj/MPGeneralPreferencesViewController.strings
@@ -1,27 +1,27 @@
+
 /* Class = "NSButtonCell"; title = "Sync preview scrollbar when editor scrolls"; ObjectID = "2Uj-Sx-FjV"; */
-"2Uj-Sx-FjV.title" = "Synchroniser le défilement de la prévisualisation quand l'éditeur défile";
+"2Uj-Sx-FjV.title" = "Sync preview scrollbar when editor scrolls";
 
 /* Class = "NSBox"; title = "Behavior"; ObjectID = "Nma-PL-ZvX"; */
-"Nma-PL-ZvX.title" = "Comportement";
+"Nma-PL-ZvX.title" = "Behavior";
 
 /* Class = "NSButtonCell"; title = "Put editor on the right"; ObjectID = "bUn-PQ-5Ez"; */
-"bUn-PQ-5Ez.title" = "Afficher l’éditeur à droite";
+"bUn-PQ-5Ez.title" = "Put editor on the right";
 
 /* Class = "NSBox"; title = "Update"; ObjectID = "eLn-fW-Agu"; */
-"eLn-fW-Agu.title" = "Mettre à jour";
+"eLn-fW-Agu.title" = "Update";
 
 /* Class = "NSButtonCell"; title = "Automatically create files for link targets"; ObjectID = "hpF-zP-3cM"; */
-"hpF-zP-3cM.title" = "Créer automatiquement les fichiers des cibles de lien";
+"hpF-zP-3cM.title" = "Automatically create files for link targets";
 
 /* Class = "NSButtonCell"; title = "Ensure open document on launch"; ObjectID = "l9N-wk-WRY"; */
-"l9N-wk-WRY.title" = "Forcer l’ouverture d’un document vierge au démarrage";
+"l9N-wk-WRY.title" = "Ensure open document on launch";
 
 /* Class = "NSButtonCell"; title = "Update preview automatically as you type"; ObjectID = "npz-xj-plX"; */
-"npz-xj-plX.title" = "Mettre à jour automatiquement la prévisualisation à la saisie";
+"npz-xj-plX.title" = "Update preview automatically as you type";
 
 /* Class = "NSButtonCell"; title = "Show word count"; ObjectID = "oeW-bF-ybW"; */
-"oeW-bF-ybW.title" = "Afficher le compteur de mots";
+"oeW-bF-ybW.title" = "Show word count";
 
 /* Class = "NSButtonCell"; title = "Include pre-releases"; ObjectID = "vbz-fv-8BX"; */
-"vbz-fv-8BX.title" = "Inclure les versions beta";
-
+"vbz-fv-8BX.title" = "Include pre-releases";
