--- a/MacDown/Localization/nl-NL.lproj/MPHtmlPreferencesViewController.strings
+++ b/MacDown/Localization/nl-NL.lproj/MPHtmlPreferencesViewController.strings
@@ -1,57 +1,57 @@
+
 /* Class = "NSSegmentedCell"; 0rH-I9-Dxr.ibShadowedLabels[0] = "Reveal"; ObjectID = "0rH-I9-Dxr"; */
-"0rH-I9-Dxr.ibShadowedLabels[0]" = "Révéler";
+"0rH-I9-Dxr.ibShadowedLabels[0]" = "Reveal";
 
 /* Class = "NSSegmentedCell"; 0rH-I9-Dxr.ibShadowedLabels[1] = "Reload"; ObjectID = "0rH-I9-Dxr"; */
-"0rH-I9-Dxr.ibShadowedLabels[1]" = "Actualiser";
+"0rH-I9-Dxr.ibShadowedLabels[1]" = "Reload";
 
 /* Class = "NSTextFieldCell"; title = "Math support requires Internet connection."; ObjectID = "5Ch-dG-juL"; */
-"5Ch-dG-juL.title" = "Le support Mathématique requiert une connexion internet.";
+"5Ch-dG-juL.title" = "Math support requires Internet connection.";
 
 /* Class = "NSButtonCell"; title = "TeX-like math syntax"; ObjectID = "6vg-3f-KWk"; */
-"6vg-3f-KWk.title" = "Syntaxe mathématique TeX-like";
+"6vg-3f-KWk.title" = "TeX-like math syntax";
 
 /* Class = "NSTextFieldCell"; title = "CSS:"; ObjectID = "9I3-I7-HLu"; */
-"9I3-I7-HLu.title" = "CSS :";
+"9I3-I7-HLu.title" = "CSS:";
 
 /* Class = "NSButtonCell"; title = "Syntax highlighted code block"; ObjectID = "BuQ-02-oQB"; */
-"BuQ-02-oQB.title" = "Bloc de code avec coloration syntaxique";
+"BuQ-02-oQB.title" = "Syntax highlighted code block";
 
 /* Class = "NSButtonCell"; title = "Use dollar sign ($) as inline delimiter"; ObjectID = "GF9-Dm-IoB"; */
-"GF9-Dm-IoB.title" = "Utiliser le signe dollar ($) en tant que délimiteur en ligne";
+"GF9-Dm-IoB.title" = "Use dollar sign ($) as inline delimiter";
 
 /* Class = "NSMenuItem"; title = "Custom"; ObjectID = "Jmq-wq-Dux"; */
-"Jmq-wq-Dux.title" = "Personnalisé";
+"Jmq-wq-Dux.title" = "Custom";
 
 /* Class = "NSButtonCell"; title = "Render newline literally"; ObjectID = "Sty-qG-J6K"; */
-"Sty-qG-J6K.title" = "Prendre en compte les sauts de ligne dans l'éditeur";
+"Sty-qG-J6K.title" = "Render newline literally";
 
 /* Class = "NSButtonCell"; title = "Show line numbers"; ObjectID = "WZa-V6-vvf"; */
-"WZa-V6-vvf.title" = "Afficher les numéros de ligne";
+"WZa-V6-vvf.title" = "Show line numbers";
 
 /* Class = "NSTextFieldCell"; title = "Theme:"; ObjectID = "a6o-qD-AIp"; */
-"a6o-qD-AIp.title" = "Thème :";
+"a6o-qD-AIp.title" = "Theme:";
 
 /* Class = "NSButtonCell"; title = "Scale preview based on editor font size"; ObjectID = "aWw-Wb-pBl"; */
-"aWw-Wb-pBl.title" = "Ajuster la prévisualisation en fonction de la taille de texte de l'éditeur";
+"aWw-Wb-pBl.title" = "Scale preview based on editor font size";
 
 /* Class = "NSTextFieldCell"; title = "Default path:"; ObjectID = "e1A-Mm-svq"; */
-"e1A-Mm-svq.title" = "Chemin par défaut :";
+"e1A-Mm-svq.title" = "Default path:";
 
 /* Class = "NSButtonCell"; title = "Detect Jekyll front-matter"; ObjectID = "iXi-Pv-mFl"; */
-"iXi-Pv-mFl.title" = "Détecter le front-matter de Jekyll";
+"iXi-Pv-mFl.title" = "Detect Jekyll front-matter";
 
 /* Class = "NSButtonCell"; title = "Task list syntax"; ObjectID = "kBf-iW-HlH"; */
-"kBf-iW-HlH.title" = "Syntaxe de liste de tâches";
+"kBf-iW-HlH.title" = "Task list syntax";
 
 /* Class = "NSButtonCell"; title = "Detect table of contents token"; ObjectID = "nvS-dZ-eHT"; */
-"nvS-dZ-eHT.title" = "Détecter le token de table des matières";
+"nvS-dZ-eHT.title" = "Detect table of contents token";
 
 /* Class = "NSMenuItem"; title = "None"; ObjectID = "pWW-vM-8JK"; */
-"pWW-vM-8JK.title" = "Aucun";
+"pWW-vM-8JK.title" = "None";
 
 /* Class = "NSMenuItem"; title = "Language name"; ObjectID = "qFd-cs-OtZ"; */
-"qFd-cs-OtZ.title" = "Nom du langage";
+"qFd-cs-OtZ.title" = "Language name";
 
 /* Class = "NSTextFieldCell"; title = "Accessory:"; ObjectID = "wNy-ka-IZm"; */
-"wNy-ka-IZm.title" = "Accessoire :";
-
+"wNy-ka-IZm.title" = "Accessory:";
